--- a/blog.html
+++ b/blog.html
@@ -4,7 +4,11 @@
         <link rel="stylesheet" href="style.css">
     </head>
     <body>
-        <h1>Aquí vamos a hacer un blog post</h1>
-        <p>Y este es el párrafo de inicio</p>
+        <div id="contariner">
+            <div id="post">
+                <h1>Aquí vamos a hacer un blog post</h1>
+                <p>Y este es el párrafo de inicio</p>
+            </div>
+        </div>
     </body>
 </html>
