Estructura inicial de la cabecera

--- a/blog.html
+++ b/blog.html
@@ -5,6 +5,9 @@
     </head>
     <body>
         <div id="contariner">
+            <div id="cabecera">
+                Cabecera
+            </div>
             <div id="post">
                 <h1>Aquí vamos a hacer un blog post</h1>
                 <p>Y este es el párrafo de inicio</p>
