--- a/blog.html
+++ b/blog.html
@@ -6,7 +6,8 @@
     <body>
         <div id="contariner">
             <div id="cabecera">
-                Cabecera
+                Don Blog
+                <span id="tagline">Tu blog de confianza</span>
             </div>
             <div id="post">
                 <h1>Aquí vamos a hacer un blog post</h1>
