--- a/blog.html
+++ b/blog.html
@@ -8,6 +8,7 @@
             <div id="post">
                 <h1>Aquí vamos a hacer un blog post</h1>
                 <p>Y este es el párrafo de inicio</p>
+                <p>Los blog son la mejor forma de compartir información y tus ideas</p>
             </div>
         </div>
     </body>
