--- a/blog.html
+++ b/blog.html
@@ -7,12 +7,13 @@
         <div id="contariner">
             <div id="cabecera">
                 Don Blog
-                <span id="tagline">Tu blog de confianza</span>
+                <span id="tagline">Tu blog maestro</span>
             </div>
             <div id="post">
                 <h1>Aquí vamos a hacer un blog post</h1>
                 <p>Y este es el párrafo de inicio</p>
                 <p>Los blog son la mejor forma de compartir información y tus ideas</p>
+                <p>Suscribete y dale like</p>
             </div>
         </div>
     </body>
