--- a/blog.html
+++ b/blog.html
@@ -1,6 +1,6 @@
 <html>
     <head>
-        <title>El titulo del post</title>
+        <title>Bienvenido a Blog</title>
         <link rel="stylesheet" href="style.css">
     </head>
     <body>
