Se envía el nuevo header

--- a/blog.html
+++ b/blog.html
@@ -4,8 +4,9 @@
         <link rel="stylesheet" href="style.css">
     </head>
     <body>
-        <div id="contariner">
+        <div id="container">
             <div id="cabecera">
+                <img src="img/header.jpg" alt="" class="img-header">
                 Don Blog
                 <span id="tagline">Tu blog de cabecera</span>
             </div>
