Se envía el nuevo footer

--- a/blog.html
+++ b/blog.html
@@ -4,7 +4,7 @@
         <link rel="stylesheet" href="style.css">
     </head>
     <body>
-        <div id="contariner">
+        <div id="container">
             <div id="cabecera">
                 Don Blog
                 <span id="tagline">Tu blog de cabecera</span>
@@ -15,6 +15,10 @@
                 <p>Los blog son la mejor forma de compartir información y tus ideas</p>
                 <p>Suscribete y dale like</p>
             </div>
+            <div id="footer">
+                Esto es el nuevo footer
+            </div>
         </div>
+        
     </body>
 </html>
