--- a/blog.html
+++ b/blog.html
@@ -13,7 +13,7 @@
             <div id="post">
                 <h1>Aquí vamos a hacer un blog post</h1>
                 <p>Y este es el párrafo de inicio</p>
-                <p>Los blog son la mejor forma de compartir información y tus ideas</p>
+                <p>Los blog son la mejor forma de compartir información y tus ideas increíbles</p>
                 <p>Suscribete y dale like</p>
             </div>
             <div id="footer">
