Enviando cambio en ecperimento 2

--- a/blog.html
+++ b/blog.html
@@ -7,7 +7,7 @@
         <div id="container">
             <div id="cabecera">
                 <img src="img/header.jpg" alt="" class="img-header">
-                Don Blog web ecperimento
+                Don Blog web ecperimento 2
                 <span id="tagline">Tu blog de cabecera</span>
             </div>
             <div id="post">
