Enviando cambio en master 2

--- a/blog.html
+++ b/blog.html
@@ -17,7 +17,7 @@
                 <p>Suscribete y dale like</p>
             </div>
             <div id="footer">
-                Esto es el nuevo footer
+                Esto es el nuevo footer master 2
             </div>
         </div>
         
